@@ -1,3 +1,8 @@
+2012-01-25  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/51966
+	* gfortran.dg/derived_constructor_char_3.f90: New.
+
 2012-01-24  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/51948
